--- a/style.css
+++ b/style.css
@@ -1,13 +1,29 @@
+html
+{
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+body
+{
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 .background-left
 {
-    display: inline;
+    /* display: inline-block; */
     width: 50%;
-    min-height: 100%;
-    background-image: url('./lr2/photo/wallpaper@3x.png')
+    height: 100%;
+    background: url('./lr2/photo/wallpaper@3x.png');
+    background-size: cover;
+    position: fixed;
 }
 .background-right
 {
-    display: inline;
+    /* display: inline-block; */
     width: 50%;
-    background-color: black;
+    height: 10000%;
+    float: right;
+    background-color: rgb(223, 223, 223);
 }
