--- a/style.css
+++ b/style.css
@@ -10,34 +10,123 @@ body
     padding: 0;
     margin: 0;
 }
+
+
 .background-left
 {
-    /* display: inline-block; */
+    display: inline-block;
     width: 50%;
     height: 100%;
     background: url('./lr2/photo/wallpaper.png');
     background-size: cover;
     position: fixed;
 }
-.background-right
+/* .author
 {
-    width: 50%;
-    height: 1000%; /* over 9000 */
-    float: right;
-    background-color: rgb(241, 241, 241);
+    
+} */
+.author-photo
+{
+    margin-top: 7%;
+    margin-left: 7%;
+
+    border-radius: 50%;
+    float: left;
 }
+.author-name
+{
+
+    margin-left: 5%;
+    margin-right: 40px;
+    margin-top: 10%;
+    margin-bottom: 5px;
+
+    display: inline-block;
+    font-family: 'Helvetica', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: white;
+
+    text-shadow: 0px 0px 5px rgb(83, 83, 83);
+
+}
+.blog
+{
+    margin-left: 5%;
+    margin-right: 40px;
+    margin-top: 5px;
+
+    display: inline-block;
+    font-family: Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: white;
+
+    text-shadow: 0px 0px 5px rgb(83, 83, 83);
+
+}
+
+
+
+
 .Headline-H1
 {
-    padding: 35% 20% 50% 10%;
-    text-align: center;
+    display: inline-block;
 
-    /* color */
-    font-family: Geomanist;
-    font-size: 48px;
+    margin-left: 55%;
+    margin-right: 10%;
+    margin-top: 15%;
+    margin-bottom: 10px;
+
+    font-family: 'Geomanist', 'Helvetica', sans-serif;
+    font-size: 53px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.21;
+    line-height: 1.3;
     letter-spacing: normal;
     color: #2c2c35;
+
+    text-shadow: 0px 0px 1px rgb(180, 180, 180);
+}
+.Sub-title
+{
+    margin-left: 55%;
+    margin-right: 10%;
+    margin-top: 10px;
+
+    font-family: 'Helvetica';
+    font-size: 22px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.7;
+    letter-spacing: normal;
+    color: #2c2c35;
+
+    text-shadow: 0px 0px 1px rgb(212, 212, 212);
+}
+.arrow-down
+{
+    /* position: relative; */
+    margin-top: 15%;
+    margin-left: 75%;
+    margin-right: 25%;
+    margin-bottom: 50px;
+
+    width: 30px;
+    height: 30px;
+}
+.example
+{
+    margin-left: 70%;
+    margin-top: 100%;
 }
