--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body
 
 .background-left
 {
-    display: inline-block;
     width: 50%;
     height: 100%;
     background: url('./lr2/photo/wallpaper.png');
@@ -39,7 +38,7 @@ body
     margin-left: 5%;
     margin-right: 40px;
     margin-top: 10%;
-    margin-bottom: 5px;
+    margin-bottom: 0;
 
     display: inline-block;
     font-family: 'Helvetica', sans-serif;
@@ -76,7 +75,7 @@ body
 
 
 
-
+/* Right side */
 .Headline-H1
 {
     display: inline-block;
@@ -126,8 +125,174 @@ body
     /* width: 30px;
     height: 30px; */
 }
-.example
+/* Page 2 */
+.Headline-H2 
 {
-    margin-left: 70%;
-    margin-top: 100%;
+    margin-top: 72px;
+    margin-left: 55%;
+    margin-right: 10%;   
+
+    font-family: 'Geomanist', 'Helvetica';
+    font-size: 40px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #2c2c35;
+
+}
+.text
+{
+    margin-top: 32px;
+    margin-left: 55%;
+    margin-right: 10%;
+
+    font-family: 'Helvetica';
+    font-size: 18px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.8;
+    letter-spacing: normal;
+    color: #2c2c35;
+
+}
+.Sherwood-Forest-Lake 
+{
+    margin-top: 20px;
+    margin-left: 50%;
+    margin-right: 40px;
+    margin-bottom: 40px;
+
+    float:left;
+}
+.lake
+{
+    margin-top: 40px;
+    margin-left: 50%;
+    width: 50%;
+
+}
+.lake-description
+{
+    margin-top: 16px;
+    margin-left: 55%;
+    margin-right: 10%;
+
+    text-align: center;
+    color: rgb(172, 172, 172);
+
+    font-family: 'Helvetica';
+    font-size: 16px;
+
+    text-shadow: 0px 0px 1px rgb(231, 231, 231);
+}
+.grey-line
+{
+    margin-left: 55%;
+    margin-right: 10%;
+    margin-bottom: 40px;
+    width: 35%;
+    color: rgb(231, 231, 231);
+}
+.Headline-H3 {
+    margin-top: 72px;
+    margin-left: 55%;
+    margin-right: 10%;
+
+    font-family: 'Geomanist', 'Helvetica';
+    font-size: 36px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #2c2c35;
+}
+.Headline-H4 {
+    margin-top: 72px;
+    margin-left: 55%;
+    margin-right: 10%;
+
+    font-family: 'Geomanist', 'Helvetica';
+    font-size: 32px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #2c2c35;
+}
+.quote
+{
+    margin-top: 48px;
+    margin-bottom: 48px;
+    text-align: center;
+
+    font-size: 20px;
+    font-style: italic;
+    line-height: 1.6;
+    font-family: 'Roboto', 'Helvetica';
+}
+.forest{
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-right: 0;
+    margin-bottom: 40px;
+
+    float:right;
+}
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+.bottom{
+    margin:40px 0 0 50%;
+    width:50%;
+    height: 400px;
+    
+    display: inline-block;
+
+    box-shadow: 0 0 17px 0 rgba(0, 0, 0, 0.15);
+    background-image: linear-gradient(to bottom, rgb(253, 253, 253), rgb(248, 248, 248), rgb(238, 238, 238), rgb(185, 185, 185));
+}
+.info
+{
+    margin: 10%;
+    border: 1px solid black;
+}
+.author-photo-second{
+    margin-top: 1%;
+    margin-right: 5%;
+    margin-bottom: 1%;
+    border-radius: 50%;
+    float: left;
+}
+.author-name-second{
+    margin-top: 0;
+
+    font-family: 'Helvetica', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;    
+
+    text-shadow: 0px 0px 1px rgb(231, 231, 231);
+    color: #2c2c35;
+}
+.bio
+{
+    font-family: Helvetica;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.6;
+    letter-spacing: normal;
+    font-size: 16px;
+    text-shadow: 0px 0px 1px rgb(231, 231, 231);
+    color: #2c2c35;
 }
