--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ body
     background-size: cover;
     position: fixed;
 }
-/* .author
+.author
 {
-    
-} */
+    margin-top: 70px;
+}
 .author-photo
 {
-    margin-top: 7%;
+
     margin-left: 7%;
 
     border-radius: 50%;
@@ -37,7 +37,7 @@ body
 
     margin-left: 5%;
     margin-right: 40px;
-    margin-top: 10%;
+    margin-top: 20px;
     margin-bottom: 0;
 
     display: inline-block;
@@ -72,7 +72,73 @@ body
     text-shadow: 0px 0px 5px rgb(83, 83, 83);
 
 }
+.icons
+{
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+    height: 150px;
+    width: 100px;
+    margin: 5px;
 
+    padding: right;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    padding: 10px;
+
+    z-index: 1;
+    
+}
+.icons:hover
+{
+    background-color: rgba(31, 31, 31, 0.788);
+    border-radius: 5px;
+}
+.logo
+{
+    padding: 10px;
+}
+/* .logo:hover
+{
+    background-color: rgb(111, 74, 199);
+    border-radius: 5px;
+
+} */
+.goto-website
+{
+    position: absolute;
+    bottom: 6%;
+    left: 3%;
+    /* height: 30px;
+    width: 300px; */
+    margin: 5px;
+
+    display:flex;
+    justify-content: center;
+    align-items: baseline;
+}
+.arrow-left
+{
+    width: 18px;
+    margin: 5px;
+}
+.website-text
+{
+    margin: 5px;
+    font-family: 'Helvetica';
+    font-size: 18px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    letter-spacing: normal;
+    color: white;
+    
+    text-shadow: 0px 0px 5px rgb(83, 83, 83);
+
+}
 
 
 /* Right side */
@@ -82,7 +148,7 @@ body
 
     margin-left: 55%;
     margin-right: 10%;
-    margin-top: 15%;
+    margin-top: 250px;
     margin-bottom: 10px;
     width: 35%;
 
@@ -115,15 +181,51 @@ body
 
     text-shadow: 0px 0px 1px rgb(212, 212, 212);
 }
+@keyframes arrow
+{
+    0% 
+    {
+        opacity: 0;
+        margin-top: 220px;
+        margin-bottom: 80px;
+    }
+    50%
+    {
+        opacity: 100;
+    }
+    100% 
+    {
+        opacity: 0;
+        margin-top: 280px;
+        margin-bottom: 20px;
+    }
+}
+@keyframes disappear
+{
+    /* 0%
+    {
+        opacity: 100;
+    } */
+    100%
+    {
+        opacity: 0;
+    }
+}
 .arrow-down
 {
-    margin-top: 13%;
+    margin-top: 220px;
     margin-left: 73%;
     margin-right: 20%;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
+    
+    opacity: 0;
 
-    /* width: 30px;
-    height: 30px; */
+    /* animation: none; */ 
+    animation-name: arrow;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-delay: 3s;
 }
 /* Page 2 */
 .Headline-H2 
@@ -258,7 +360,7 @@ body
     position: relative;
     margin:40px 0 0 50%;
     width:50%;
-    padding-bottom:5%;
+    padding-bottom: 100px;
     
     box-shadow: 0 0 17px 0 rgba(0, 0, 0, 0.15);
     background-image: linear-gradient(to bottom, rgb(253, 253, 253), rgb(248, 248, 248), rgb(238, 238, 238), rgb(185, 185, 185));
