--- a/style.css
+++ b/style.css
@@ -25,32 +25,52 @@ body
 .background-left
 {
     width: 50%;
+    min-width: 516px;
     height: 100%;
     background: url('./lr2/photo/wallpaper.png');
     background-size: cover;
     position: fixed;
     top: 0;
     left: 0;
+    
+    z-index: 2;
+
 }
 .author
 {
     margin-top: 70px;
+    margin-left: 6%;
+    padding: 20px;
+    width: 70%;
+    max-width: 350px;
+
+    border-radius: 5px;
+
+    color: white;
+    text-shadow: 0px 0px 5px rgb(83, 83, 83);
+
+    
+
+}
+.author:hover
+{
+    
+    background-color: white;
+    color: #2c2c35;
+    text-shadow: none;
+    cursor: pointer;
+
+    box-shadow: 0 0 17px 0 rgba(0, 0, 0, 0.15);
 }
 .author-photo
 {
-
-    margin-left: 7%;
+    margin-right: 40px;
 
     border-radius: 50%;
     float: left;
-    background-position: right center;
-    background-size: 100px 100px;
 }
 .author-name
 {
-
-    margin-left: 5%;
-    margin-right: 40px;
     margin-top: 20px;
     margin-bottom: 0;
 
@@ -62,15 +82,11 @@ body
     font-stretch: normal;
     line-height: normal;
     letter-spacing: normal;
-    color: white;
 
-    text-shadow: 0px 0px 5px rgb(83, 83, 83);
 
 }
 .blog
 {
-    margin-left: 5%;
-    margin-right: 40px;
     margin-top: 5px;
 
     display: inline-block;
@@ -81,9 +97,7 @@ body
     font-stretch: normal;
     line-height: normal;
     letter-spacing: normal;
-    color: white;
 
-    text-shadow: 0px 0px 5px rgb(83, 83, 83);
 
 }
 .icons
@@ -115,12 +129,10 @@ body
 {
     padding: 10px;
 }
-/* .logo:hover
+.logo:hover
 {
-    background-color: rgb(111, 74, 199);
-    border-radius: 5px;
-
-} */
+    cursor: pointer;
+}
 .goto-website
 {
     position: absolute;
@@ -132,12 +144,15 @@ body
 
     display:flex;
     justify-content: center;
-    align-items: baseline;
+    align-items: center;
+    /* border: 1px solid black; */
 }
 .arrow-left
 {
     width: 18px;
     margin: 5px;
+
+    /* border: 1px solid black; */
 }
 .website-text
 {
@@ -149,6 +164,7 @@ body
     font-stretch: normal;
     letter-spacing: normal;
     color: white;
+    /* border: 1px solid black; */
     
     text-shadow: 0px 0px 5px rgb(83, 83, 83);
 
@@ -158,17 +174,17 @@ body
 /* Right side */
 .background-right
 {
-    display: inline-block;
+    /* display: inline-block; */
     margin-left: 50%;
-    border: 1px solid black;
-    width: 45%;
+    /* border: 1px solid black; */
+    width: 50%;
 }
 .Headline-H1
 {
 
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 10%;
+    margin-top: 20%;
     margin-bottom: 10px;
 
     font-family: 'Geomantist', 'Helvetica';
@@ -197,6 +213,7 @@ body
     letter-spacing: normal;
     color: #2c2c35;
 
+
     text-shadow: 0px 0px 1px rgb(212, 212, 212);
 }
 @keyframes arrow
@@ -204,8 +221,7 @@ body
     0% 
     {
         opacity: 0;
-        margin-top: 20px;
-        margin-bottom: 100px;
+        bottom: 50px;
     }
     50%
     {
@@ -214,8 +230,7 @@ body
     100% 
     {
         opacity: 0;
-        margin-top: 50px;
-        margin-bottom: 70px;
+        bottom: 20px;
     }
 }
 @keyframes disappear
@@ -231,10 +246,12 @@ body
 }
 .arrow-down
 {
-    margin-top: 20px;
-    margin-left: 49%;
-    margin-right: 49%;
-    margin-bottom: 100px;
+    /* display: block;
+    margin-left: auto;
+    margin-right: auto; */
+    position: fixed;
+    bottom: 50px;
+    right: 24%;
     
     opacity: 0;
 
@@ -243,12 +260,12 @@ body
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-    animation-delay: 3s;
+    animation-delay: 2s;
 }
 /* Page 2 */
 .Headline-H2 
 {
-    margin-top: 72px;
+    margin-top: 60%;
     margin-left: 10%;
     margin-right: 10%;   
 
@@ -315,7 +332,6 @@ body
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 40px;
-    width: 35%;
     color: rgb(231, 231, 231);
 }
 .Headline-H3 {
@@ -489,6 +505,7 @@ body
 }
 .subscribe-form
 {
+    width: 100%;
     position: relative;
 }
 .input-field
@@ -498,7 +515,7 @@ body
     left: 0;
 
     padding: 12px 25% 12px 56px;
-    width: 50%;
+    width: 56%;
     margin-right: 50px;
 
 
@@ -527,7 +544,6 @@ body
     position: absolute;
     top: 0;
     right: 0;
-    /* width: 25%; */
     padding: 13px 13px;
 
     border: none;
@@ -547,4 +563,5 @@ body
 .subscribe-button:hover
 {
     background-color: #29cc6d;
+    cursor: pointer;
 }
