--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ body
     margin-left: 50%;
     /* border: 1px solid black; */
     width: 50%;
+    position: relative;
 }
 .Headline-H1
 {
@@ -221,7 +222,8 @@ body
     0% 
     {
         opacity: 0;
-        bottom: 50px;
+        /* bottom: 50px; */
+        top: 7%;
     }
     50%
     {
@@ -230,7 +232,8 @@ body
     100% 
     {
         opacity: 0;
-        bottom: 20px;
+        /* bottom: 20px; */
+        top: 8%;
     }
 }
 @keyframes disappear
@@ -249,9 +252,12 @@ body
     /* display: block;
     margin-left: auto;
     margin-right: auto; */
-    position: fixed;
+    /* position: fixed;
     bottom: 50px;
-    right: 24%;
+    right: 24%; */
+    position: absolute;
+    top: 7%;
+    right: 49%;
     
     opacity: 0;
 
